# LifeLink_ESP32App

./: .gitignore  ALGORITHMS.md  CMakeLists.txt  LifeLink.code-workspace  LifeLink_Dokumentacija_Projekta.md  README.md  README_RS.md  TECHNICAL_DOC_RS.md  build_log.txt  build_output.txt  diff2.txt  sdkconfig  sdkconfig.defaults
components/SensorLib/src/: SensorCommon.tpp
components/lc76g/: CMakeLists.txt  lc76g.c
components/lc76g/include/: lc76g.h
components/max30102/: CMakeLists.txt  max30102.cpp  max30102_algorithm.cpp
components/max30102/include/: algorithm.h  max30102.h
main/: CMakeLists.txt  axp2101.c  axp2101.h  ble_spp_server.c  ble_spp_server.h  example_qspi_with_ram.cpp  fft_algo.c  fft_algo.h  gsm_a6.c  gsm_a6.h  idf_component.yml  lifelink.cpp
main/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h
main/ui/images/: ui_img_1716151603.c  ui_img_logo128_png.c  ui_img_pulse36_png.c
main/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_Screen4.h
slFront/: SquareLine_Project.sll  SquareLine_Project.slp  SquareLine_Project.spj  project.info
website/: index.html  style.css
